[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "img-gen-ai"
version = "1.0.1"
description = "Flask-based AI Image Generator using Gemini 2.5 Flash Image API"
authors = [
  { name = "Raqeeb Mohamad Rafeek", email = "your-email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "Flask>=3.1.2",
  "flask-cors>=6.0.1",
  "gunicorn>=23.0.0",
  "google-genai>=1.48.0",
  "google-auth>=2.41.1",
  "google-cloud-aiplatform>=1.122.0",
  "google-cloud-storage>=2.19.0",
  "numpy>=1.26.4",
  "opencv-python-headless>=4.12.0.88",
  "pillow>=12.0.0",
  "python-dotenv>=1.1.1",
  "requests>=2.32.5",
  "Werkzeug>=3.1.3"
]

[project.optional-dependencies]
dev = [
  "ipython",
  "pytest",
  "black",
  "flake8"
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-autorefs",
  "mkdocs-glightbox"
]

[tool.setuptools.packages.find]
where = ["img_gen_ai"]
